# keypair-cli

./: Cargo.toml  README.md  env.json
src/: lib.rs  main.rs
src/features/on_chain/: Cargo.toml
src/features/on_chain/src/: lib.rs
src/features/on_chain/src/connect/: client.rs  provider.rs
src/features/on_chain/src/utils/: time.rs
src/features/wllt_gen/: Cargo.toml
src/features/wllt_gen/src/: lib.rs
src/features/wllt_gen/src/wallet/: derivation_path.rs  entropy.rs  hmac_sha512.rs  mnemonic.rs
src/features/wllt_gen/src/wallet/ethereum/: eth_wallet.rs
src/ui_menus/: mod.rs
src/ui_menus/connect/: first_try.rs  mod.rs  reconnect.rs
src/ui_menus/master/: master_menu.rs  mod.rs
src/ui_menus/wlltmngr/: mod.rs  settings.rs  wllt_mngr_menu.rs
